# Enceladus-API

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  diesel.toml  feature-flags.html  index.html  precommit  print.html  rustfmt.toml  searchindex.js  searchindex.json  semver.html  websockets.html
api/: Cargo.toml  build.rs
api/src/: encryption.rs  main.rs  rocket_conditional_attach.rs  schema.rs
api/src/controller/: claim.rs  event.rs  global_admin.rs  mod.rs  section.rs  thread.rs  user.rs
api/src/endpoint/: event.rs  generics.rs  meta.rs  mod.rs  oauth.rs  section.rs  thread.rs  user.rs
api/src/fairing/: feature_filter.rs  mod.rs
api/src/reddit/: mod.rs  scope.rs
api/src/telemetry/: mod.rs  requests.rs  ws_clients.rs  ws_message.rs
api/src/tests/: event.rs  markdown.rs  mod.rs  oauth.rs  preset_event.rs  section.rs  thread.rs  user.rs
api/src/tests/helpers/: client.rs  mod.rs  thread.rs  user.rs
api/src/websocket/: mod.rs  structs.rs
authn/: flow.html  hierarchy.html  index.html  permissions.html
docs/: book.toml
docs/src/: SUMMARY.md  feature-flags.md  index.md  semver.md
docs/src/authn/: flow.md  hierarchy.md  index.md  permissions.md
docs/src/endpoints/: index.md  meta.md
docs/src/endpoints/v1/: event.md  section.md  thread.md  user.md
docs/src/types/: index.md  rust.md  ts.md
endpoints/: index.html  meta.html
endpoints/v1/: event.html  section.html  thread.html  user.html
enum_display/: Cargo.toml
enum_display/src/: lib.rs
macros/: Cargo.toml  rustfmt.toml
macros/src/: helpers.rs  keyword.rs  lib.rs
migrations/0001_create_users_table/: up.sql
migrations/0002_create_preset_events_table/: down.sql  up.sql
migrations/0003_create_thread_table/: down.sql
migrations/0003_create_threads_table/: up.sql
migrations/0004_create_sections_table/: down.sql  up.sql
migrations/0005_create_events_table/: up.sql
migrations/0006_add_crated_by_fk/: up.sql
migrations/0006_add_created_by_fk/: down.sql
migrations/0007_add_in_thread_fk/: down.sql  up.sql
migrations/0008_add_lock_held_by_fk/: down.sql  up.sql
migrations/0009_subreddit_is_optional/: down.sql  up.sql
migrations/0010_add_section_lock_expiration/: down.sql  up.sql
migrations/0011_field_feature_flags/: down.sql  up.sql
migrations/0012_drop_preset_events_table/: down.sql  up.sql
migrations/0013_dynamic_events_columns/: down.sql  up.sql
migrations/0014_add_user_access_token/: down.sql  up.sql
migrations/0015_encrypted_user_tokens/: down.sql  up.sql
migrations/0016_generic_video_url/: down.sql  up.sql
migrations/0017_thread_is_live/: down.sql  up.sql
migrations/0018_is_host/: down.sql  up.sql
reddit/: Cargo.toml
reddit/src/: builder.rs  lib.rs  reddit_builder.rs  scope.rs  user_builder.rs
rocket_telemetry/: Cargo.toml
rocket_telemetry/src/: lib.rs  request_log.rs  request_timer.rs
src/: main.rs  schema.rs
src/controller/: claim.rs  event.rs  global_admin.rs  mod.rs  preset_event.rs  section.rs  thread.rs  user.rs
src/endpoint/: event.rs  generics.rs  helpers.rs  meta.rs  mod.rs  oauth.rs  preset_event.rs  section.rs  thread.rs  user.rs
src/fairing/: feature_filter.rs
src/reddit/: mod.rs
src/tests/: common.rs  event.rs  markdown.rs  meta.rs  mod.rs  oauth.rs  preset_event.rs  section.rs  thread.rs  user.rs  user_helpers.rs
src/tests/helpers/: client.rs  thread.rs
types/: index.html  rust.html  ts.html
