[package]
name = "enceladus-api"
version = "0.1.0"
repository = "https://github.com/r-spacex/Enceladus-API-rs"
license = "Apache-2.0"
authors = ["Jacob Pratt <the.z.cuber@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
diesel = { version = "1.4.1", features = ["serde_json"] }
dotenv = "0.13.0"
dotenv_codegen = "0.11.0"
enceladus_macros = { path = "../macros" }
hashbrown = "0.1.8"
itertools = "0.8.0"
jsonwebtoken = "5.0.1"
lazy_static = "1.2.0"
lru-cache = "0.1.1"
openssl = "0.10.18"
parking_lot = { version = "0.7.1", features = ["nightly", "deadlock_detection"] }
reddit = { path = "../reddit" }
reqwest = "0.9.9"
rocket = "0.4.0"
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.38"
uuid = { version = "0.7.2", features = ["v4"] }
ws = "0.8.0"
rocket_cors = "0.4.0"
enum_display = { path = "../enum_display" }

[dependencies.rocket_contrib]
default-features = false
features = ["diesel_postgres_pool", "json", "helmet"]
version = "0.4.0"

[dev-dependencies]
rand = "0.6.5"

[build-dependencies]
openssl = "0.10.19"
